[package]
name = "wallpapers"
version = "0.1.1"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"
repository = "https://github.com/songzhi/wallpapers"
readme = "README.md"
keywords = ["wallpaper", "cli"]
license = "MIT"
description = "Set wallpaper periodically."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallpaper = "2.0.1"
once_cell = "0.2.1"
serde = "1.0.94"
toml = "0.5.1"
fs2 = "0.4.3"

[target.'cfg(unix)'.dependencies]
daemonize = "0.4.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "consoleapi", "winsvc" ] }